# stephen-king-parser

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  activate_venv.sh  pyproject.toml  readme.md  requirements.txt  setup.py  setup.sh  setup_venv.sh
csv/: stephen_king_works.csv  stephen_king_works_1251.csv  stephen_king_works_1310.csv  stephen_king_works_20250216_204709.csv  stephen_king_works_20250216_211626.csv  stephen_king_works_20250216_214512.csv  stephen_king_works_20250216_221445.csv  stephen_king_works_20250216_224726.csv  stephen_king_works_20250216_232044.csv  stephen_king_works_20250216_232204.csv  stephen_king_works_20250216_235806.csv  stephen_king_works_20250217_000843.csv  stephen_king_works_20250217_003114.csv  stephen_king_works_20250217_013200.csv  stephen_king_works_20250217_022119.csv  stephen_king_works_20250217_032557.csv  stephen_king_works_20250217_045043.csv  stephen_king_works_20250217_062014.csv  stephen_king_works_20250217_062910.csv  stephen_king_works_20250217_071414.csv  stephen_king_works_20250217_160619.csv  stephen_king_works_20250217_220136.csv  stephen_king_works_20250218_000534.csv  stephen_king_works_20250218_003625.csv  stephen_king_works_20250218_012238.csv  stephen_king_works_20250218_045206.csv  stephen_king_works_20250218_045649.csv  stephen_king_works_20250218_045955.csv  stephen_king_works_20250218_050343.csv  stephen_king_works_20250218_105253.csv  stephen_king_works_20250218_105733.csv  stephen_king_works_20250218_110150.csv  stephen_king_works_20250218_111952.csv  stephen_king_works_20250218_112619.csv  (+33 more)
(+162 files in other folders)
