[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stephen_king_parser"
version = "0.1.0"
description = "A parser for Stephen King's website"
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.scripts]
stephen-king-parser = "stephen_king_parser.__main__:main"
